--- a/src/r/crispr_validation.Rmd
+++ b/src/r/crispr_validation.Rmd
@@ -31,135 +31,31 @@ library(rrcov)
 # 2. Read in data
 ```{r}
 rm(list=ls())
+robpca_data = "D:/Analysis/EMT/ceres_robpca.RData"
+load(robpca_data)
+```
+
+## Grab CCLE meta data
+First, we'll get relevant meta data
+```{r}
+# Linux
+#metapath = "~/Data/CRISPR/sample_info.csv"
 
 # Dell
-datapath = 'D:/Data/CRISPR/Achilles/Achilles_gene_effect.csv'
+metapath = 'D:/Data/Mappings/CCLE/sample_info.csv'
 
-# Linux
-#datapath = '~/Data/CRISPR/Achilles_gene_effect.csv'
-
-# Read in data
-data = readr::read_csv(datapath)
-```
-
-# 3. Perform Robust PCA to remove bad cell line and gene data
-First, we'll grab the CERES Scores.
-```{r}
-ceres = data[, 2:ncol(data)]
-ceres = data.matrix(ceres)
-ceres[is.na(ceres)] = 0
-ceres = as.matrix(ceres)
-ids = data.frame(data[, 1])
-```
-
-First, we'll create a function that can perform ROBPCA on the data.
-```{r}
-# Create a function that filters data using ROBPCA
-removeOutliers = function(data, id){
-  pca_obj = PcaHubert(data)
-  filtered_data = data[pca_obj@flag, ]
-  filtered_id = id[pca_obj@flag,]
-  outlier_data = data[!pca_obj@flag, ]
-  outlier_id = id[!pca_obj@flag,]
-  
-  setClass(Class="geneObj",
-           representation(
-             data="matrix",
-             outlier_data="matrix",
-             id="character",
-             flag="logical",
-             outlier_id="character",
-             robpca='PcaHubert'
-           )
-   )
-   return(new("geneObj",
-          data=filtered_data,
-          outlier_data=outlier_data,
-          id=filtered_id,
-          flag=pca_obj@flag,
-          outlier_id=outlier_id,
-          robpca=pca_obj))
-}
-```
-
-## Perform PCA
-```{r}
-pca_obj = prcomp(ceres, scale=FALSE)
-```
-
-## Visualize PCA Scores Plot
-Let's visualize the original PCA dimension reduction.
-```{r}
-scores = data.frame(pca_obj[["x"]])
-ggplot(scores, aes(x=PC1, y=PC2)) +  
-  geom_point() +
-  labs(title="CERES Scores Plot", 
-       x="PC1", 
-       y="PC2") +
-  theme(legend.position="none")
-```
-
-## Robust PCA
-Now let's remove some outliers using Robust PCA:
-```{r}
-pca_obj = PcaHubert(ceres)
-robpca_ceres = removeOutliers(ceres, ids)
-
-rob_scores = data.frame(robpca_ceres@robpca$scores)
-ggplot(rob_scores, aes(x=PC1, y=PC2)) +  
-  geom_point() +
-  labs(title="CERES Robust PCA Scores Plot", 
-       x="PC1", 
-       y="PC2") +
-  theme(legend.position="none")
-```
-
-## Visualize cell lines that are omitted from ROBPCA
-I am curious about what cell lines are omitted.
-```{R}
-outlier_id = data.frame(robpca_ceres@outlier_id)
-filtered_cell_lines = merge(meta_data, 
-                            outlier_id,
-                            by.x='DepMap_ID',
-                            by.y='robpca_ceres.outlier_id')
-```
-
-
-```{r}
-# Group by 
-tmp = aggregate(filtered_cell_lines$lineage, 
-                by=list(filtered_cell_lines$lineage), 
-                length)
-tmp = tmp %>% arrange(x)
-tmp$Group.1 = factor(tmp$Group.1,
-                     levels=tmp$Group.1[order(tmp$x, decreasing = TRUE)])
-
-# Plot by tissue
-ggplot(data=tmp, 
-       aes(x=Group.1, 
-           y=x, 
-           fill=x,
-           label=x)) +
-  geom_bar(stat='identity',
-           position='dodge') +
-  coord_flip() +
-  labs(y="Number of cell lines removed",
-       x="Tissue lineage",
-       title="Cell lines removed from robust PCA") + 
-  guides(fill=guide_legend(title="N cell lines")) +
-  geom_text(aes(label=x), 
-            position=position_dodge(width=0.9), 
-            hjust=-0.25)
+# Read in meta data
+meta_data = read_csv(metapath)
+meta_data = meta_data[, c("DepMap_ID", 
+                        "stripped_cell_line_name", 
+                        "primary_or_metastasis",
+                        "lineage",
+                        "lineage_subtype")]
 ```
 
 # 4. Compute P-values from CERES Score
-We'll use the ceres data from the Robust PCA analysis.
-```{r}
-ceres = robpca_ceres@data
-ids = robpca_ceres@id
-```
 
-### Global p-value
+## Global p-value
 Next, we'll compute the p-values using the data itself. Most of the data lies close to 0 (no activity), while the significant data points lie on the left side of the data distribution. Thus, we'll compute the left-tailed P-value.
 ```{r}
 mu = mean(ceres, na.rm=TRUE)
@@ -220,23 +116,6 @@ What we need to do is map it to the following:
   * Cancer Cell Line Tissue Lineage
   * Entrez ID
 
-## Grab CCLE meta data
-First, we'll get relevant meta data
-```{r}
-# Linux
-#metapath = "~/Data/CRISPR/sample_info.csv"
-
-# Dell
-metapath = 'D:/Data/Mappings/CCLE/sample_info.csv'
-
-# Read in meta data
-meta_data = read_csv(metapath)
-meta_data = meta_data[, c("DepMap_ID", 
-                        "stripped_cell_line_name", 
-                        "primary_or_metastasis",
-                        "lineage",
-                        "lineage_subtype")]
-```
 ## Filter the data to get only NSCLC
 Now we need to select specific cell lines that we're interested in from the NSCLC subtype.
 ```{r}
@@ -250,7 +129,7 @@ lung_meta_data = lung_meta_data[!is.na(lung_meta_data$primary_or_metastasis),]
 We should clean up the column names for the Project Achilles and store as both symbol and entrez ID separately.
 ```{r}
 # Save gene symbols
-orig_colnames = colnames(data)
+orig_colnames = colnames(ceres)
 all_symbol = as.character(sapply(strsplit(orig_colnames, " "), '[', 1))
 #all_symbol = all_symbol[-1]
 
